projects/compiler/test/typechecker/match/error_destructuring_variant_duplicate_variable.1.out
Error at %FILE_NAME%:5:19
Duplicate name 'g'
  |    Color.RGB(r, g, g) => r + g
                       ^
This name is also declared at (5:16)
  |    Color.RGB(r, g, g) => r + g
                    ^
